# terra

./: .coveragerc  .coveragerc_nt  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CTestCustom.cmake  Justfile  LICENSE  Pipfile  README.md  autopep8.ini  docker-compose-main.yml  docker-compose-swarm.yml  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.env  setup.py  singular-compose.env  terra.env  vxl.env
.circleci/: config.yml
.github/workflows/: windows.yml
.troubleshoot.d/: terra_installed
_sources/: index.rst.txt
_sources/python/: terra.compute.rst.txt  terra.core.rst.txt  terra.executor.celery.rst.txt  terra.executor.rst.txt  terra.generic.rst.txt  terra.rst.txt  terra.utils.rst.txt
_sources/terra/: compute.rst.txt  getting_started.rst.txt  settings.rst.txt
deploy/: just.py  just_wrapper  terra.spec
docker/: Pipfile  redis-browser.Dockerfile  redis-browser.yaml  redis.Dockerfile  redis.Justfile  terra.Dockerfile  terra.Justfile  terra_entrypoint.bsh  tosingular  vxl.Dockerfile  vxl_entrypoint.bsh
docs/: conf.py  index.rst
docs/_ext/: celerydocs.py
docs/terra/: apps.rst  compute.rst  contributing.rst  executor.rst  getting_started.rst  settings.rst
freeze/: hook-celery.py  hook-terra.py  terra.spec
hello/: CMakeLists.txt  hi.cxx  hi.hxx
hello/tests/: CMakeLists.txt  test_driver.cxx  test_hiya.cxx
pyproj/: CMakeLists.txt  pyhello.cxx  pyhello.h  pyproj.cxx
pyproj/tests/: CMakeLists.txt  test_hello.py
pyterra/: CMakeLists.txt  pyhello.cxx  pyhello.h  pyterra.cxx
pyterra/tests/: CMakeLists.txt  test_hello.py
python/: modules.html  terra.compute.html  terra.core.html  terra.executor.celery.html  terra.executor.html  terra.generic.html  terra.html  terra.utils.html
terra/: __init__.py  apps.html  compute.html  contributing.html  exceptions.py  executor.html  getting_started.html  logger.py  settings.html  task.py  utils.py  workflow.py
terra/compute/: __init__.py  base.py  container.py  docker.py  dummy.py  just.py  singularity.py  utils.py  virtualenv.py
terra/compute/base/: __init__.py  base.py
terra/compute/docker/: __init__.py  base.py
terra/compute/dummy/: __init__.py  base.py
terra/compute/local/: __init__.py  base.py
terra/compute/virtualenv/: __init__.py
terra/core/: exceptions.py  settings.py  signals.py  utils.py
terra/executor/: __init__.py  base.py  dummy.py  process.py  resources.py  sync.py  thread.py  utils.py
terra/executor/celery/: __init__.py  __main__.py  celeryconfig.py  executor.py
terra/generic/: __main__.py  definitions.py
terra/hardware/base/: base.py
terra/run/: __main__.py
terra/run/dsm/: __main__.py
terra/tests/: __init__.py  template.py  test_compute_base.py  test_compute_container.py  test_compute_docker.py  test_compute_dummy.py  test_compute_just.py  test_compute_singularity.py  test_compute_utils.py  test_compute_virtualenv.py  test_core_settings.py  test_core_utils.py  test_core_utils_last.py  test_executor_celery.py  test_executor_dummy.py  test_executor_resources.py  test_executor_sync.py  test_executor_utils.py  test_handler.py  test_logger.py  test_other.py  test_settings.py  test_signals.py  test_utils_cli.py  test_utils_logger.py  test_utils_path.py  test_utils_workflow.py  utils.py
terra/tests/demo/: __main__.py  services.py  tasks.py  workflows.py
terra/tests/demo/runners/: demo1.py  demo2.py
terra/utils/: cli.py  gpu.py  logger.py  new.py  path.py  runner.py  workflow.py
